<?xml version="1.0"?>
<package format="2">
  <name>ros2ros</name>
  <version>1.0.0</version>
  <description>Tools for hydromea luma x optical modem</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="roger.pi@udg.edu">Roger Pi</maintainer>
  <license>opensource</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nodelet</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />

  </export>

</package>
